APT-1868 fix cropped splash screen

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -715,3 +715,9 @@ button,
   margin-left: 0 !important;
   padding-left: 0 !important;
 }
+
+@supports (-webkit-touch-callout: none) {
+  .fix-mobile-height {
+    height: -webkit-fill-available;
+  }
+}
